--- a/css/reset.css
+++ b/css/reset.css
@@ -1,1 +1,15 @@
 
+*{
+    padding: 0px;
+    margin:0px;
+    box-sizing: border-box;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+ul { 
+    list-style: none;
+}
