--- a/css/style.css
+++ b/css/style.css
@@ -195,3 +195,61 @@ body {
   }
 
 }
+
+  
+/*
+*
+*
+/* ///////////..first section../////////// 
+*
+*
+*/
+.cover {
+    padding: 10px;
+    height: 100vh; 
+    background-image: url(../images/index/cover-mobile.jpg);
+    color: var(--color-white);
+    width: 100%; 
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center; 
+    background-attachment: scroll;     
+}
+  
+  
+.cover__title h1 {
+    font-family: 'Dancing Script', cursive;
+    font-size: 3.5rem;
+    font-weight: 700;  
+    padding: 0px 10px;  
+}
+
+.cover__title span {
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 500;  
+    font-size: 2.2rem; 
+} 
+
+.cover__title p {
+    padding: 10px 10px;
+    font-size: 1rem; 
+}
+  
+  /* ......../ media query /.......... */
+  
+@media screen and (min-width: 768px) {
+   
+  .cover {
+    background-attachment: fixed;
+    background-image: url(../images/index/cover-desktop.jpg);
+  }
+
+  .cover__title h1 {
+    font-size: 6rem;
+  }
+
+  .cover__title span { 
+    font-size: 3.5rem;
+  } 
+}
