--- a/css/style.css
+++ b/css/style.css
@@ -501,3 +501,85 @@ ul {
       
   }
 }
+
+ /*
+*
+*
+/* ///////////.Fourth section../////////// 
+*
+*
+*/
+  
+.section-4 {
+  height: auto;
+  background-color: var(--color-black);
+}
+
+.section-4__container-text h2 {
+  text-align: center;
+  color: var(--color-white);
+  font-size: 1.3rem;
+  padding: 40px;  
+}
+
+.section-4__container-images a { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 40px;
+}
+
+.section-4__link {
+  width: 50%;
+  height: auto;
+}
+
+.section-4__link:hover {
+  box-shadow: 0px 0px 1px 3px var(--color-flame);
+}
+
+/* ......../ media query /.......... */
+@media screen and (min-width: 768px) {
+
+  .section-4 {
+    height: 950px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  .section-4__container {
+    width: 100%;
+  }
+
+  .section-4__container-text h2 {
+    font-size: 2rem;
+    padding: 50px 50px;
+  }
+
+  .section-4__container-images {
+    display: flex;
+    margin: 10px; 
+  }
+
+  .section-4__container-images a { 
+    display: flex;
+    justify-content: normal;
+    align-items: normal;
+    max-height: 700px;
+    width: 50%;
+  }
+
+  .section-4__container-images a:first-child {
+    justify-content: end;
+  }
+
+  .section-4__link {
+    width: auto;
+    height: auto;
+    max-width: 85%;
+    max-height: 100%;
+    margin: 0px 50px;  
+  }
+
+}
