--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,6 @@ body {
   body {
     font-size: 1.1rem;
   }
-
 }
 
 
@@ -71,15 +70,14 @@ body {
   top: 5px;
   right: 35px;
   width: 80px;
-  
  }
 
 .navbar .menu-items {
+  margin-left: -350px;
   padding-top: 100px;
   background: var(--color-white);
   height: 100vh;
   max-width: 300px;
-  transform: translate(-150%);
   display: flex;
   flex-direction: column;
   padding-left: 60px;
@@ -139,9 +137,8 @@ body {
 }
 
 .navbar-container input[type="checkbox"]:checked ~ .menu-items {
-  transform: translateX(0);
+  transform: translateX(350px);
 }
-
 
 .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
   transform: rotate(35deg);
